--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,3 +133,10 @@ services:
         condition: service_started
     volumes:
       - ./consensus:/consensus
+
+  ethereum-lite-explorer:
+    image: "alethio/ethereum-lite-explorer"
+    ports:
+      - 81:80
+    environment:
+      APP_NODE_URL: "http://127.0.0.1:8545"
